# Crypto-Sentinel

./: .gitignore  Crypto Sentinel Full Prd V2.docx  EXPLANATION.md  README.md  RUN_COMMANDS.md  SETUP_GUIDE.md  documentation.docx  plan.txt
backend/: CMakeLists.txt
backend/include/api/: api_manager.h
backend/include/engine/: alert_manager.h  risk_analyzer.h  sentiment_analyzer.h  strategy_engine.h
backend/include/models/: crypto_asset.h  portfolio.h  transaction.h  user.h
backend/include/utils/: file_handler.h
backend/src/: alert_manager.cpp  api_manager.cpp  crypto_asset.cpp  file_handler.cpp  main.cpp  portfolio.cpp  risk_analyzer.cpp  sentiment_analyzer.cpp  strategy_engine.cpp  transaction.cpp  user.cpp
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/auth/: page.tsx
frontend/app/lib/: api.ts
frontend/app/portfolio/: page.tsx
frontend/app/prices/: page.tsx
frontend/app/risk/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/strategy/: page.tsx
frontend/app/types/: index.ts
frontend/components/: HoldingsChart.tsx  PortfolioSummary.tsx  PriceChart.tsx  RiskWidget.tsx  SentimentWidget.tsx  Sidebar.tsx  StatCard.tsx
